display active toggle buttons as orange

--- a/web/sass/base.scss
+++ b/web/sass/base.scss
@@ -227,7 +227,7 @@ button.compact {
     padding: 4px 8px;
 }
 button.toggle.active {
-    background-color: var(--color-good) !important;
+    background-color: var(--color-primary) !important;
     color: var(--color-text-inverse) !important;
 }
 
