--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -399,7 +399,7 @@
         }
     }
     &:not([mode="measure"]) {
-        #distanceCanvas { display: none; }
+        #distanceCanvas { pointer-events: none; }
     }
     &:not([mode="fow"]) {
         #polymaskWrapper { pointer-events: none; opacity: 0.7; }
