use player colors to fill measuring squares

--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -558,7 +558,7 @@
         stroke: none !important;
     }
     g > rect {
-        fill: #fb86 !important;
+        fill: unset;
         stroke: #fff !important;
         width: 1px;
         height: 1px;
