--- a/web/sass/panels.scss
+++ b/web/sass/panels.scss
@@ -101,8 +101,7 @@
         grid-template-columns: auto auto;
         grid-auto-rows: min-content;
         gap: 4px;
-        // padding: 4px;
-        min-height: 20vh;
+        min-height: calc(40vh - 80px);
         max-height: 25vh;
         overflow-y: auto;
         overflow-x: hidden;
@@ -112,8 +111,8 @@
         }
 
         img {
-            width: 64px;
-            height: 64px;
+            width: 56px;
+            height: 56px;
         }
 
         input { width: 100%; }
