introduced icon wall on home page

--- a/web/sass/base.scss
+++ b/web/sass/base.scss
@@ -62,6 +62,7 @@ body {
         --color-panel-border: #72534aaa;
         --color-header: #2e2926;
         --color-separator: #614f4a;
+        --color-icon-wall: #251f1d;
     
         --weight-thick: 500;
         --shadow-panel: 0 0 12px 6px #0006;
