--- a/web/sass/base.scss
+++ b/web/sass/base.scss
@@ -546,6 +546,7 @@ footer {
     bottom: 0;
     left: 0;
     width: 100%;
+    z-index: 101;
     box-sizing: border-box;
     display: flex;
     justify-content: center;
