Initiative Bar shows in Center of Board with pictures of the Characters from left to right

--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -14,6 +14,13 @@
     box-sizing: border-box;
 }
 
+#initiativeBar{
+    //position: absolute;
+    flex-direction: row;
+    top: 16px;
+    justify-content: center;
+}
+
 #boardContainer {
     position: relative;
     overflow: hidden;
