--- a/web/sass/base.scss
+++ b/web/sass/base.scss
@@ -127,6 +127,10 @@ a {
             filter: grayscale(1) contrast(1.2) brightness(1.5);
         }
     }
+
+    &.icon {
+        text-decoration: none;
+    }
 }
 
 @keyframes icon {
@@ -549,10 +553,21 @@ footer {
     z-index: 101;
     box-sizing: border-box;
     display: flex;
-    justify-content: center;
-    gap: 24px;
-    padding: 12px 24px;
+    justify-content: space-between;
+    padding: 12px 16px;
     background-color: #030303c0;
+    color: var(--color-button-text);
+
+    > div {
+        width: 50%;
+        display: flex;
+        gap: 24px;
+        align-items: center;
+    }
+
+    .with-tooltip > span {
+        right: -8px;
+    }
 } 
 
 .space-between {
