added tooltips for measuring tools

--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -600,6 +600,16 @@
     white-space: nowrap;
 }
 
+#tooltip {
+    position: absolute;
+    bottom: 80px;
+    background-color: #111a;
+    border-radius: 8px;
+    padding: 8px 12px;
+    text-shadow: 0 0 3px #000,
+                 0 0 8px #000a;
+}
+
 #grid {
     position: absolute;
     --cell-size: 4;
