closeable initiative tracker

--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -14,11 +14,12 @@
     box-sizing: border-box;
 }
 
-#initiativeBar{
-    //position: absolute;
-    flex-direction: row;
+#initiativeBar {
     top: 16px;
-    justify-content: center;
+
+    &.hidden {
+        display: none;
+    }
 }
 
 #boardContainer {
