--- a/web/sass/base.scss
+++ b/web/sass/base.scss
@@ -443,6 +443,23 @@ li {
     justify-content: center;
     flex-direction: row !important;
     gap: 8px !important;
+    
+    .char {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+        cursor: pointer;
+        transition-duration: 0.1s;
+        width: 48px;
+
+        img {
+            height: 48px;
+            border-radius: 6px;
+            box-shadow: 0 0 2px var(--color-text-primary);
+            box-sizing: border-box;
+        }
+    }
 }
 
 %center {
