--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -16,6 +16,7 @@
 
 #initiativePanel {
     > span {
+        justify-content: center;
         font-size: 20px;
     }
 }
@@ -761,11 +762,9 @@
             --length: 1;
         }
     }
-    &:hover, &.hovered {
-        &.accessible {
-            border-width: 3px;
-            border-color: var(--color-primary);
-        }
+    &.accessible:hover, &.hovered {
+        border-width: 3px;
+        border-color: var(--color-primary) !important;
     }
     &.selected {
         border-width: 3px;
