--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -481,7 +481,6 @@
         }
 
         .movable.accessible {
-            border-width: 3px;
             border-color: white;
             box-shadow: 0 0 8px #0008 inset;
         }
@@ -600,8 +599,10 @@
     outline: 1px solid transparent;
 
     #movableGhost {
+        @include base.center-background;
         opacity: 0.75;
         z-index: 2;
+        border-radius: 50%;
         box-shadow: 0 0 10px #000a;
         pointer-events: none;
     }
@@ -678,26 +679,26 @@
     100% { margin-top: 0; opacity: 1; }
 }
 @keyframes movable-remove {
-    0%   { margin-top: 0; opacity: 1; }
+    0%   { margin-top: 0; opacity: 0.5; }
     100% { margin-top: 40px; opacity: 0; }
 }
 
-.movable {
-    @include base.center-background;
-    position: absolute;
-    border: 0 solid transparent;
+.aura, .ring, .movable > .img {
     border-radius: 50%;
+    pointer-events: none;
+}
+
+.movable {
+    position: absolute;
+    border: 0 solid var(--color-background);
     width: calc(var(--size) * 70px);
     height: calc(var(--size) * 70px);
     left: calc(var(--x) * var(--cell-size) * 1px);
     top: calc(var(--y) * var(--cell-size) * 1px);
     box-sizing: border-box;
-    box-shadow: 0 0 8px #000a;
     transform-origin: top left;
     transform: scale(calc(var(--cell-size) / 70));
-    transition: border-color 0.25s,
-                border-width 0.05s,
-                width 0.1s, height 0.1s;
+    transition: border-color 0.1s, width 0.1s, height 0.1s;
 
     --size: 1;
     --x: 0;
@@ -710,13 +711,29 @@
         transition: left 0.3s, top 0.3s;
     }
     &.animate-remove {
-        animation: movable-remove 0.5s forwards cubic-bezier(0.6, -0.28, 0.735, 0.045) !important;
+        animation: movable-remove 0.4s forwards cubic-bezier(0.6, -0.28, 0.735, 0.045) !important;
+    }
+
+    > * {
+        position: absolute;
+        box-sizing: border-box;
+    }
+
+    > .img {
+        @include base.center-background;
+        top: 0;
+        left: 0;
+        width: inherit;
+        height: inherit;
+        border: 3px solid;
+        border-color: inherit;
+        border-radius: 50%;
+        z-index: 1;
     }
 
     > .conds {
-        position: absolute;
-        top: -3px;
-        left: -3px;
+        top: 0;
+        left: 0;
         display: flex;
         cursor: default;
 
@@ -735,24 +752,28 @@
         }
     }
 
+    > .aura {
+        left: calc(var(--aura) * -70px);
+        top: calc(var(--aura) * -70px);
+        width: calc(70px * (var(--aura) * 2 + var(--size)));
+        height: calc(70px * (var(--aura) * 2 + var(--size)));
+        background-color: #fff4;
+        transition: 0.1s;
+    }
+
     > .ring {
-        position: absolute;
         width: 100%;
         height: 100%;
-        z-index: -1;
-        border-radius: 50%;
-        pointer-events: none;
         animation: scale-pulse 2s infinite ease-in-out;
-        box-sizing: border-box;
     }
 
     &.empty {
-        border-width: 3px;
         border-color: var(--color-bad);
         display: flex;
         align-items: center;
         justify-content: center;
-        background: #222 !important;
+
+        .img { background: #222; }
 
         > span {
             pointer-events: none;
@@ -765,15 +786,16 @@
         }
     }
     &.accessible:hover, &.hovered {
-        border-width: 3px;
         border-color: var(--color-primary) !important;
     }
     &.selected {
-        border-width: 3px;
         border-color: var(--color-primary);
-        box-shadow: 0 0 16px 4px #000a,
-                    0 0 8px #0008 inset;
         z-index: 3;
+
+        > img {
+            box-shadow: 0 0 16px 4px #000a,
+                        0 0 8px #0008 inset;
+        }
         
         > .ring {
             border: 3px solid var(--color-primary);
