--- a/web/sass/home.scss
+++ b/web/sass/home.scss
@@ -13,7 +13,7 @@
 }
 
 #iconWall {
-    position: absolute;
+    position: fixed;
     z-index: -100;
     top: 0;
     left: 0;
@@ -61,7 +61,7 @@
         display: flex;
         flex-direction: column;
         gap: 16px;
-        padding: 32px;
+        padding: 48px;
     }
 
     #loginTab {
@@ -166,4 +166,52 @@
 @keyframes popup {
     0% { transform: scale(0.5); opacity: 0; }
     100% { transform: scale(1); opacity: 1; }
+}
+
+#features {
+    align-items: center;
+    border-top: 2px solid var(--color-separator);
+    gap: 32px !important;
+
+    .info {
+        @extend %vertical;
+        gap: 16px;
+        max-width: 50%;
+
+        img {
+            max-width: max-content;
+            margin-top: auto;
+            margin-bottom: 3px;
+        }
+    }
+
+    p { font-size: 19px; }
+
+    > div {
+        display: flex;
+        justify-content: center;
+        gap: 32px;
+        width: 100%;
+        margin-bottom: 100px;
+
+        > div { min-width: 32vw; }
+    }
+
+    img, video {
+        border: 2px solid var(--color-note);
+        border-radius: 6px;
+        box-shadow: 0 0 30px #0006;
+        opacity: 0.7;
+        transition: 0.2s;
+
+        &:hover {
+            opacity: 1;
+        }
+    }
+
+    .media {
+        > * {
+            height: 24vw;
+        }
+    }
 }
