display accessible tokens on top of others

--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -481,6 +481,7 @@
         .movable.accessible {
             border-color: white;
             box-shadow: 0 0 8px #0008 inset;
+            z-index: 2;
         }
 
         .step-input {
