--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -120,18 +120,35 @@
 
         > .panel {
             padding: 8px;
-            transition: opacity 0.1s;
+            transition: opacity 0.2s;
         }
     }
 
     #prefabPalette {
-        min-width: none;
         gap: 0;
+        height: auto;
+        max-height: 800px;
+        transition-property: opacity, max-height !important;
+        transition-timing-function: ease-in-out !important;
+
+        > .close {
+            background-color: transparent !important;
+        }
+
+        &.collapsed {
+            max-height: 22px;
+            overflow: hidden;
+
+            > .prefab-selection {
+                opacity: 0;
+            }
+        }
 
         > .prefab-selection {
             display: flex;
             flex-direction: column;
             gap: 2px;
+            transition: opacity 0.1s;
         }
 
         .prefab-container {
@@ -768,7 +785,7 @@
         top: calc(var(--aura) * -70px);
         width: calc(70px * (var(--aura) * 2 + var(--size)));
         height: calc(70px * (var(--aura) * 2 + var(--size)));
-        background-color: #fff4;
+        background-color: #8884;
         transition: 0.1s;
     }
 
